# pirig

./: .gitignore  .gitmodules  README.md
healthyrig/: Cargo.toml  LICENSE  config.toml
healthyrig/src/: main.rs
thorinpi/: Cargo.toml  OpenSSL-issue.md  config.toml  pirun.sh
thorinpi/src/: conf.rs  core.rs  main.rs  rig.rs  sensor.rs  vent.rs
